Making sidebar the navbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,8 +18,8 @@ hr {
     background-color: #913175;
 }
 
-/* Sidebar style */
-.sidebar {
+/* navbar style */
+.navbar {
     height: 20%;
     width: 15%;
     /* Putting in top left */
