Changing page background color

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 /* Styling entire page */
 body {
-    background-color: #FAF9F6;
+    background-color: #fafafa;
     font-family: Garamond, serif;
 }
 
