--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body {
 
 /* Main content style */
 .body-text {
-    width: 80%;
+    width: 100%;
     float: right;
     color: #20262E;
 }
@@ -18,16 +18,17 @@ hr {
     background-color: #913175;
 }
 
+.page-link {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+
 /* navbar style */
 .navbar {
     height: 20%;
-    width: 15%;
-    /* Putting in top left */
-    left: 2%;
-    top: 2%;
-    /* Text styling */
-    padding-top: 0%;
-    text-align: center;
+    width: 50%;
+    margin-left: 25%;
     /* Keeping position absolute when scrolling page */
     position: absolute;
 }
@@ -43,7 +44,7 @@ hr {
   }
   
   /* Clear floats after the columns */
-  .row:after {
+  .row::after {
     content: "";
     display: table;
     clear: both;
