Changing background color

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 :root {
     /* Background color */
-    --background-color: white;
+    --background-color: #FEFBEA;
     /* Text sizing */
     --p-text-size: 1.5em;
     --h1-text-size: 2em;
