--- a/styles/global.css
+++ b/styles/global.css
@@ -12,6 +12,17 @@ html {
     background-color: var(--background-color);
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+
 /* Navbar styling */
 .navbar {
     position: -webkit-sticky; /* Safari */
