--- a/styles/global.css
+++ b/styles/global.css
@@ -15,13 +15,13 @@ html {
 /* Hide scrollbar for Chrome, Safari and Opera */
 body::-webkit-scrollbar {
     display: none;
-  }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  body {
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-  }
+}
 
 /* Navbar styling */
 .navbar {
@@ -100,4 +100,32 @@ p {
 /* Styling strong */
 strong {
     font-size: var(--p-text-size);
+}
+
+/* Button styling */
+.pushable {
+    border-radius: 12px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    background: hsl(340deg 100% 32%);
+}
+
+.pushable .front {
+    display: block;
+    padding: 12px 42px;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    background: hsl(345deg 100% 47%);
+    transform: translateY(-4px);
+    transition: transform 250ms;
+}
+
+.pushable:hover .front {
+    transform: translateY(-6px);
+}
+
+.pushable:active .front {
+    transform: translateY(-2px);
 }
