--- a/styles/tictactoe.css
+++ b/styles/tictactoe.css
@@ -2,3 +2,11 @@
     display: grid;
     justify-content: center;
 }
+
+.opponent-grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+
+    margin-top: 10vh;
+    column-gap: 10vw;
+}
