--- a/styles/tictactoe.css
+++ b/styles/tictactoe.css
@@ -1,3 +1,11 @@
+h1 {
+    margin: 5vh auto;
+
+    font-size: 5em;
+    font-weight: bolder;
+    font-family: Tahoma;
+}
+
 .container {
     display: grid;
     justify-content: center;
