--- a/styles/board.css
+++ b/styles/board.css
@@ -1,6 +1,6 @@
 :root {
     /* Button height and width */
-    --button-width: 20vmin;
+    --button-width: 15vmin;
 }
 
 /* Div object that holds tictactoe buttons */
@@ -18,7 +18,7 @@
     border: 3px solid black;
     border-radius: 0;
 
-    font-size: 6em;
+    font-size: 10vmin;
     font-weight: bolder;
     font-family: Tahoma;
 }
