--- a/styles/tictactoe.css
+++ b/styles/tictactoe.css
@@ -1,7 +1,7 @@
 h1 {
-    margin: 5vh auto;
+    margin: 10vh auto;
 
-    font-size: 5em;
+    font-size: 4em;
     font-weight: bolder;
     font-family: Tahoma;
 }
@@ -17,4 +17,9 @@ h1 {
 
     margin-top: 10vh;
     column-gap: 10vw;
+}
+
+.navbar {
+    /* Making navbar not sticky */
+    position: relative;
 }
