--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,10 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    object-fit: cover;
+    height: 100vh;
+    width: 100vw;
 }
 
 .profile-text {
