--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,6 @@
+/* Importing our font */
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Global styling */
 :root {
     /* Background color */
@@ -5,11 +8,16 @@
     /* Text sizing */
     --p-text-size: 1.5em;
     --h1-text-size: 2em;
+    /* Fonts */
+    --body-font: 'Chivo', sans-serif;;
 }
 
 /* Setting background color */
 html {
     background-color: var(--background-color);
+
+    /* Setting text style */
+    font-family: var(--body-font);
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -95,6 +103,7 @@ h1 span {
 /* Styling paragraphs */
 p {
     font-size: var(--p-text-size);
+    font-family: var(--body-font);
 }
 
 /* Styling strong */
