--- a/styles/global.css
+++ b/styles/global.css
@@ -12,6 +12,16 @@
     --body-font: 'Chivo', sans-serif;;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 /* Setting background color */
 html {
     background-color: var(--background-color);
