Changing background color

--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
 /* Global styling */
 :root {
     /* Background color */
-    --background-color: #FEFBEA;
+    --background-color: white;
     /* Text sizing */
     --p-text-size: 1.5vw;
     --h1-text-size: 2vw;
