--- a/styles/index.css
+++ b/styles/index.css
@@ -75,6 +75,28 @@ p.profile-text {
     width: 20vw;
 }
 
+/* CV grid for industry experience */
+.industry-grid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+
+    column-gap: 5vw;
+
+    margin: auto 10vw;
+}
+
+.industry-grid-img {
+    /* If you add another entry to the grid, increase span of grid row */
+    grid-row: 1 / 4;
+    grid-column: 1;
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+
+.industry-grid-img img {
+    width: 20vw;
+}
+
 .cv-grid {
     display: grid;
     grid-template-columns: auto auto;
